# Simple3DProject

./: .gitattributes  CMakeLists.txt  Config.cpp  Config.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  SoundSystem.cpp  SoundSystem.h  Texture.cpp  Texture.h  main.cpp
shaders/: basic.frag
textures/Metal/: Metal053C_1K-JPG.mtlx  Metal053C_1K-JPG.usdc
